# Cowrie-Honeypot

./: .env.example  .env.lightsail.example  .gitignore  AGENTS.md  README.md  compose.yaml  pyproject.toml
config/: command_categories.yaml  cowrie.cfg.dist
docs/: README.md  architecture.md  codex-workflow.md  development-plan.md  operations.md  project-brief.md  requirements.md  security.md  test-plan.md
docs/deployment/: lightsail-setup.md  operations.md
docs/development/: architecture.md  codex-workflow.md  development-plan.md  project-brief.md  requirements.md  security.md  test-plan.md
scripts/: analyze.py  cowrie_egress_firewall.sh  exercise_cowrie_ssh.py  install_cowrie_egress_firewall_service.sh  verify_egress.ps1  verify_egress.sh
src/cowrie_observer/: __init__.py  anonymizer.py  cli.py  commands.py  exporter.py  normalizer.py  parser.py  statistics.py
tests/: test_anonymizer.py  test_cli.py  test_commands.py  test_exporter.py  test_normalizer.py  test_package.py  test_parser.py  test_statistics.py
tests/fixtures/: malformed_events.jsonl  valid_events.jsonl
