[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cowrie-observer"
version = "0.1.0"
description = "Cowrie SSH honeypot log observation and analysis tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Cowrie-Honeypot maintainers" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/cowrie_observer"]
